# flipperone-docs

./: .archbee.json  .archbee.yaml  README.md  archbee.json  archbee.yaml
.github/workflows/: test-open-tasks-generator.yml  update-open-tasks.yml  validate.yml
docs/: How-to-join.md  Open-tasks.md  Summary.md  Welcome.md  archbee.json  summary.md
docs/community/: community.md
docs/cpu-software/: About-CPU-Software.md  Architecture.md  Build-system.md  FlipCTL.md  Flipper-OS.md  How-to-build-an-image-locally.md  How-to-build-an-image.md  How-to-build-linux-image.md  How-to-install-an-image.md  How-to-install-linux-image.md  Supported-boards.md  rk3576-mainlining.md
docs/dev-log/: 1.md  2.md  3.md  4.md  Dev-Log.md
docs/general/: Controls.md  Features.md  Tech-Specs.md  test.md
docs/hardware/: About-Hardware.md  Datasheets.md  Debug-probe.md  GPIO-Modules.md  GPIO-port.md  Hardware.md  M2-Modules.md  M2-gnss-receiver.md  M2-ntn-module.md  M2-port.md  M2-satellite-modem.md  M2-satellite-modules.md  Mechanics.md  Power-meter.md  Power-subsystem.md  Schematics.md  WiFi-Bluetooth.md  WiFi.md
docs/mcu-firmware/: About-MCU-Firmware.md  Architecture.md  Firmware-update.md  How-to-build-firmware.md  Interconnect-protocol.md  MCU-CPU-interconnect.md  MCU-CPU-interface.md
docs/mechanics/: About-Mechanics.md  Hardware-expansion-system.md  Heat-sink.md  Heatsink.md  Mechanical-design.md  Module-enclosures.md  Module-mounting-system.md
docs/testing/: M_2.md  (+19 more)
tools/: generate_open_tasks.py  pyproject.toml  test_generate_open_tasks.py
tools/templates/: open_tasks.md.j2
(+25 files in other folders)
