[project]
name = "tools"
version = "0.1.0"
description = "Flipper One docs tools"
readme = "../README.md"
requires-python = ">=3.14"

[tool.mypy]
strict = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
